--- a/src/rookify/modules/create_cluster/templates/cluster.yaml.j2
+++ b/src/rookify/modules/create_cluster/templates/cluster.yaml.j2
@@ -191,6 +191,16 @@ spec:
   # The above placement information can also be specified for mon, osd, and mgr components
   #   mon:
   placement:
+    all:
+      tolerations:
+      - key: "node-role.kubernetes.io/control-plane"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
+      - key: "node-role.kubernetes.io/master"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
     mon:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
