Fix Rookify k8s label handing
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/rookify/modules/create_cluster/templates/cluster.yaml.j2
+++ b/src/rookify/modules/create_cluster/templates/cluster.yaml.j2
@@ -219,6 +219,15 @@ spec:
               operator: In
               values:
               - enabled
+    osd:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: {{ osd_placement_label }}
+              operator: In
+              values:
+              - enabled
 
   # Monitor deployments may contain an anti-affinity rule for avoiding monitor
   # collocation on the same node. This is a required rule when host network is used
