--- a/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
+++ b/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
@@ -55,48 +55,23 @@ spec:
     activeStandby: true
     # The affinity rules to apply to the mds deployment
     placement:
-      #  nodeAffinity:
-      #    requiredDuringSchedulingIgnoredDuringExecution:
-      #      nodeSelectorTerms:
-      #      - matchExpressions:
-      #        - key: role
-      #          operator: In
-      #          values:
-      #          - mds-node
-      #  topologySpreadConstraints:
-      #  tolerations:
-      #  - key: mds-node
-      #    operator: Exists
-      #  podAffinity:
-      podAntiAffinity:
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
+        - key: "node-role.kubernetes.io/master"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
+      nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-                - key: app
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: {{ rgw_placement_label }}
                   operator: In
                   values:
-                    - rook-ceph-mds
-            ## Add this if you want to allow mds daemons for different filesystems to run on one
-            ## node. The value in "values" must match .metadata.name.
-            #    - key: rook_file_system
-            #          operator: In
-            #          values:
-            #            - myfs
-            # topologyKey: kubernetes.io/hostname will place MDS across different hosts
-            topologyKey: kubernetes.io/hostname
-        preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                  - key: app
-                    operator: In
-                    values:
-                      - rook-ceph-mds
-              # topologyKey: */zone can be used to spread MDS across different AZ
-              # Use <topologyKey: failure-domain.beta.kubernetes.io/zone> in k8s cluster if your cluster is v1.16 or lower
-              # Use <topologyKey: topology.kubernetes.io/zone>  in k8s cluster is v1.17 or upper
-              topologyKey: topology.kubernetes.io/zone
+                    - enabled
     # A key/value list of annotations
     # annotations:
     #  key: value
