--- a/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
+++ b/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
@@ -77,7 +77,7 @@ spec:
                 - key: {{ rgw_placement_label }}
                   operator: In
                   values:
-                    - enabled
+                    - "true"
     # A key/value list of annotations
     # annotations:
     #  key: value
