--- a/src/rookify/modules/migrate_rgw_pools/templates/pool.yaml.j2
+++ b/src/rookify/modules/migrate_rgw_pools/templates/pool.yaml.j2
@@ -79,7 +79,7 @@ spec:
                 - key: {{ mds_placement_label }}
                   operator: In
                   values:
-                    - enabled
+                    - "true"
     # A key/value list of annotations
     annotations:
     #  key: value
