Add logic to skip RGW migration if not needed
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/rookify/modules/migrate_rgw_pools/templates/pool.yaml.j2
+++ b/src/rookify/modules/migrate_rgw_pools/templates/pool.yaml.j2
@@ -76,7 +76,7 @@ spec:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
             - matchExpressions:
-                - key: {{ mds_placement_label }}
+                - key: {{ rgw_placement_label }}
                   operator: In
                   values:
                     - "true"
