Add logic to handle Rook flag for MDS metadata pool names support
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
+++ b/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
@@ -14,6 +14,9 @@ metadata:
 spec:
   # The metadata pool spec. Must use replication.
   metadataPool:
+    {% if mds_name %}
+    name: {{ mds_name }}
+    {% endif %}
     replicated:
       size: {{ mds_size }}
       requireSafeReplicaSize: true
