Adjust Rook specs for new version/features
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/rookify/modules/migrate_rgw_pools/templates/pool.yaml.j2
+++ b/src/rookify/modules/migrate_rgw_pools/templates/pool.yaml.j2
@@ -80,6 +80,15 @@ spec:
                   operator: In
                   values:
                     - "true"
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: {{ rgw_placement_label }}
+                  operator: In
+                  values:
+                    - "true"
+            topologyKey: "kubernetes.io/hostname"
     # A key/value list of annotations
     annotations:
     #  key: value
