--- a/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
+++ b/src/rookify/modules/migrate_mds_pools/templates/filesystem.yaml.j2
@@ -53,6 +53,10 @@ spec:
         # for more info: https://docs.ceph.com/docs/master/rados/operations/placement-groups/#specifying-expected-pool-size
         #target_size_ratio: ".5"
       {% endfor %}
+  {% if mds_name %}
+  # Preserve pool names as specified
+  preservePoolNames: true
+  {% endif %}
   # Whether to preserve filesystem after CephFilesystem CRD deletion
   preserveFilesystemOnDelete: true
   # The metadata service (mds) configuration
@@ -81,6 +85,15 @@ spec:
                   operator: In
                   values:
                     - "true"
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: {{ mds_placement_label }}
+                  operator: In
+                  values:
+                    - "true"
+            topologyKey: "kubernetes.io/hostname"
     # A key/value list of annotations
     # annotations:
     #  key: value
